// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/drafts/panel/panel_body > should match snapshot 1`] = `
<div>
  <div
    class="DraftPanelBody post"
  >
    <div
      class="DraftPanelBody__left post__img"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        class="status-wrapper style--none"
        style="border-radius: 50%; width: 32px; height: 32px;"
      >
        <span
          class="profile-icon "
        >
          <img
            alt="username profile image"
            class="Avatar Avatar-md"
            loading="lazy"
            src="/api/v4/users/user_id/image?_=0"
          />
        </span>
        <span
          class="status "
        >
          <svg
            aria-label="Offline"
            class="offline--icon"
            height="100%"
            role="img"
            style="fill-rule: evenodd; clip-rule: evenodd; stroke-linejoin: round; stroke-miterlimit: 1.41421;"
            viewBox="0 0 20 20"
            width="100%"
          >
            <path
              d="M10,0c5.519,0 10,4.481 10,10c0,5.519 -4.481,10 -10,10c-5.519,0 -10,-4.481 -10,-10c0,-5.519 4.481,-10 10,-10Zm0,2c4.415,0 8,3.585 8,8c0,4.415 -3.585,8 -8,8c-4.415,0 -8,-3.585 -8,-8c0,-4.415 3.585,-8 8,-8Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="DraftPanelBody__post_body"
    >
      <div
        class="post-message post-message--collapsed"
      >
        <div
          class="post-message__text-container"
          style="max-height: 600px;"
        >
          <div
            class="post__content"
          >
            <div
              class="DraftPanelBody__right"
            >
              <div
                class="post__header"
              >
                <strong>
                  display_name
                </strong>
              </div>
              <div
                class="post__body"
              >
                <p>
                  message
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/drafts/panel/panel_body > should match snapshot for priority 1`] = `
<div>
  <div
    class="DraftPanelBody post"
  >
    <div
      class="DraftPanelBody__left post__img"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        class="status-wrapper style--none"
        style="border-radius: 50%; width: 32px; height: 32px;"
      >
        <span
          class="profile-icon "
        >
          <img
            alt="username profile image"
            class="Avatar Avatar-md"
            loading="lazy"
            src="/api/v4/users/user_id/image?_=0"
          />
        </span>
        <span
          class="status "
        >
          <svg
            aria-label="Offline"
            class="offline--icon"
            height="100%"
            role="img"
            style="fill-rule: evenodd; clip-rule: evenodd; stroke-linejoin: round; stroke-miterlimit: 1.41421;"
            viewBox="0 0 20 20"
            width="100%"
          >
            <path
              d="M10,0c5.519,0 10,4.481 10,10c0,5.519 -4.481,10 -10,10c-5.519,0 -10,-4.481 -10,-10c0,-5.519 4.481,-10 10,-10Zm0,2c4.415,0 8,3.585 8,8c0,4.415 -3.585,8 -8,8c-4.415,0 -8,-3.585 -8,-8c0,-4.415 3.585,-8 8,-8Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="DraftPanelBody__post_body"
    >
      <div
        class="post-message post-message--collapsed"
      >
        <div
          class="post-message__text-container"
          style="max-height: 600px;"
        >
          <div
            class="post__content"
          >
            <div
              class="DraftPanelBody__right"
            >
              <div
                class="post__header"
              >
                <strong>
                  display_name
                </strong>
                <div
                  class="priorityLabelsContainer"
                >
                  <div
                    class="sc-bcPLoT dyzwuI Tag Tag--info Tag--xs"
                    data-testid="post-priority-label"
                  >
                    <svg
                      fill="currentColor"
                      height="10"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="10"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2 M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M12.501,13h-1l-0.5-6h2L12.501,13z M13,16c0,0.552-0.448,1-1,1s-1-0.448-1-1s0.448-1,1-1S13,15.448,13,16z"
                      />
                    </svg>
                    <span
                      class="sc-grYavY hdoSIM"
                    >
                      Important
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="post__body"
              >
                <p>
                  message
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/drafts/panel/panel_body > should match snapshot for requested_ack 1`] = `
<div>
  <div
    class="DraftPanelBody post"
  >
    <div
      class="DraftPanelBody__left post__img"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        class="status-wrapper style--none"
        style="border-radius: 50%; width: 32px; height: 32px;"
      >
        <span
          class="profile-icon "
        >
          <img
            alt="username profile image"
            class="Avatar Avatar-md"
            loading="lazy"
            src="/api/v4/users/user_id/image?_=0"
          />
        </span>
        <span
          class="status "
        >
          <svg
            aria-label="Offline"
            class="offline--icon"
            height="100%"
            role="img"
            style="fill-rule: evenodd; clip-rule: evenodd; stroke-linejoin: round; stroke-miterlimit: 1.41421;"
            viewBox="0 0 20 20"
            width="100%"
          >
            <path
              d="M10,0c5.519,0 10,4.481 10,10c0,5.519 -4.481,10 -10,10c-5.519,0 -10,-4.481 -10,-10c0,-5.519 4.481,-10 10,-10Zm0,2c4.415,0 8,3.585 8,8c0,4.415 -3.585,8 -8,8c-4.415,0 -8,-3.585 -8,-8c0,-4.415 3.585,-8 8,-8Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="DraftPanelBody__post_body"
    >
      <div
        class="post-message post-message--collapsed"
      >
        <div
          class="post-message__text-container"
          style="max-height: 600px;"
        >
          <div
            class="post__content"
          >
            <div
              class="DraftPanelBody__right"
            >
              <div
                class="post__header"
              >
                <strong>
                  display_name
                </strong>
                <div
                  class="priorityLabelsContainer"
                >
                  <div
                    class="priorityLabelsAcknowledgements"
                  >
                    <span
                      class="icon icon-check-circle-outline"
                    />
                    Request acknowledgement
                  </div>
                </div>
              </div>
              <div
                class="post__body"
              >
                <p>
                  message
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
